# lighter-cpty

./: .gitignore  README.md  REPOSITORY_SUMMARY.md  SERVICE_MANAGEMENT.md  check_lighter_orders.py  check_lighter_status.sh  check_open_orders.py  check_orders_stream.py  create_performance_visualization.py  debug_trades.py  discover_markets.py  fetch_market_info.py  inspect_redis_books.py  lighter_account_status.py  lighter_cpty_server.py  lighter_cpty_server_async.py  measure_throughput_standalone.py  measure_ws_throughput.py  monitor_orderbook_stream.py  orderbook_maintainer.py  place_visible_order.py  pyproject.toml  query_order.py  requirements.txt  restart_cpty.sh  run_orderbook_streamer.py  run_orderbook_streamer_optimized.py  start_lighter_services.sh  stop_lighter_services.sh  test_batch_debug.py  test_batch_direct_cpty.py  test_batch_e2e.py  test_batch_order.py  test_batch_working.py  test_cancel_order.py  test_cancel_order_minimal.py  test_connectivity.py  test_cpty_connection.py  test_cpty_delta_orderbook.py  test_end_to_end_orderbook.py  (+26 more)
LighterCpty/: __init__.py  balance_fetcher.py  config_loader.py  grpc_server_patch.py  lighter_cpty.py  lighter_cpty_async.py  lighter_models.py  lighter_ws.py  market_info.py  market_loader.py  orderbook_manager.py  rate_limiter.py  redis_orderbook.py  type_compatibility.py
docs/: END_TO_END_TEST_RESULTS.md  HYPE_BERA_RESULTS.md  PRODUCTION_USAGE.md  SYMBOL_MAPPING_GUIDE.md  delta_orderbook_management.md  hype_bera_summary.md  l2_book_streaming.md  order_tracking_improvements.md  orderbook_performance_optimization.md  (+1 more)
(+48 files in other folders)
